--- a/portfolio.html
+++ b/portfolio.html
@@ -4,14 +4,14 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <meta http-equiv="X-UA-Compatible" content="ie=edge">
-    <title>Portfolio Assignmen</title>
+    <title>Portfolio Assignment</title>
     <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/meyer-reset/2.0/reset.css">
     <link rel="stylesheet" href="https://stackpath.bootstrapcdn.com/bootstrap/4.3.1/css/bootstrap.min.css" integrity="sha384-ggOyR0iXCbMQv3Xipma34MD+dH/1fQ784/j6cY/iJTQUOhcWr7x9JvoRxT2MZw1T" crossorigin="anonymous">
     <link href="https://fonts.googleapis.com/css?family=Lato|Montserrat|Playfair+Display|Raleway" rel="stylesheet">
     <link rel="stylesheet" href="style.css">
 </head>
 <body id="bodyPortfolio" class="container">
-        <div class="container headerContainer">
+        <div class="container mainContainer">
                 <section>
                     <header>
                         <h1>Mariana Finamori</h1>
@@ -22,6 +22,7 @@
                                 <li class="nav-item"><a class="nav-link" href="portfolio.html">PORTFOLIO</a></li>
                                 <li class="nav-item"><a class="nav-link" href="about.html">INFO</a></li>
                             </ul>
+                            <h3>PORTFOLIO</h3>
                     </header>
                 </section>
             
@@ -38,7 +39,7 @@
                     </div>
                     <div class="col-lg-5 m-2">
                             <a href="https://marianafinamori.github.io/Bootstrap-Portfolio/"target="_blank"><img src="images/responsiveportfolio.png">
-                            <div class="container tittle">BOOTSTRAP</div>
+                            <div class="container tittle" id="bootstrap">BOOTSTRAP PORTFOLIO</div>
                         </a>
                         <div class="github">
                                 <a href="https://github.com/marianafinamori/Bootstrap-Portfolio"target="_blank">
@@ -50,7 +51,7 @@
             <div class="row">
                     <div class="col-lg-5 m-2">
                             <a href="https://natalytak.github.io/ProjectOne/"target="_blank"><img src="images/projectone.png">
-                            <div class="container tittle">CITY SEER</div>
+                            <div class="container tittle" id="seer">CITY S<span>E</span>ER PROJE<span>C</span>T</div>
                         </a>
                         <div class="github">
                                 <a href="https://github.com/natalytak/ProjectOne"target="_blank">
@@ -60,7 +61,7 @@
                         </div>
                         <div class="col-lg-5 m-2">
                                 <a href="https://marianafinamori.github.io/TriviaGame/"target="_blank"><img src="images/triviagame.png">
-                                <div class="container tittle">TRIVIA GAME</div>
+                                <div class="container tittle" id="trivia">T<span>RI</span>VIA G<span>A</span>ME</div>
                             </a>
                             <div class="github">
                                     <a href="https://github.com/marianafinamori/TriviaGame"target="_blank">
