included constructor-node assignment

--- a/portfolio.html
+++ b/portfolio.html
@@ -80,6 +80,16 @@
                             </a>
                         </div>
                         </div>
+                        <div class="col-lg-5 m-2">
+                            <a href="https://github.com/marianafinamori/constructor-node"target="_blank"><img src="images/constructor.jpg">
+                            <div class="container tittle" id="constructor">CO<span>NSTRUC</span>TOR A<span>ND NO</span>DE</div>
+                        </a>
+                        <div class="github">
+                                <a href="https://github.com/marianafinamori/constructor-node"target="_blank">
+                            <img class="githublogo" src="images/githublogo.png">
+                            </a>
+                        </div>
+                        </div>
                        
                 </div>    
             </div>
