--- a/portfolio.html
+++ b/portfolio.html
@@ -106,7 +106,8 @@
                         </div>
                         <div class="col-lg-5 m-2">
                             <a href="https://rocky-woodland-69315.herokuapp.com/"target="_blank"><img src="images/friendfinderimg.png">
-                            <div class="container tittle" id="node-express"><span id="node-word">NODE</span> A<span id="and-ex">ND EX</span>PRESS</div>
+                            <div class="container tittle" id="node-word">NODE</div>
+                            <div class="container tittle" id="express-word">EXPRESS</div>
                         </a>
                         <div class="github">
                                 <a href="https://github.com/marianafinamori/friend-finder"target="_blank">
