--- a/about.html
+++ b/about.html
@@ -23,21 +23,25 @@
                     </header>
                 </section>
                 <div class="container">
-                <div class="row my-2 py-3">
+                <div class="row container my-2 py-3">
                 <div id="about-background">ABOUT</div>
-                <p id="bio">I am currently studying coding at Columbia University to become a
-                    software engineer. I have seven years of experience working in top advertising 
-                    agencies as an account professional where I had the opportunity to work with brands like
-                    Nestlé, Diageo, Cadbury and Pfizer. 
+                <div class="container" id="bio">
+                <p id="bio1">I am a full-stack software engineer graduated from Columbia University coding bootcamp. 
+                    I want to turn complex problems into simple and relevant applications.
                 </p>
+                <p id="bio2">I have experience in advertising working with consumers motivations, insights, behavior 
+                    trends and brand positioning for several clients like Nestlé, Diageo, Pfizer and Cadbury Adams.
+                </p>
+                </p>
+                <p id="bio4">I am passionate about education, design and fashion.</p>
                 </div>
-                <div class="row my-2 py-3">
+                <div class="container row my-2 py-3">
                     <div id="contact-background">CONTACT</div>
                     <div id="contactContainer">
                     <div id="email">
                         Email: mariana.finamori@gmail.com
                     </div>
-                    <div id="linkedin"><a href="https://www.linkedin.com/in/mariana-finamori-280893160/"target="_blank">LINKEDIN</a></div>
+                    <div id="linkedin"><a href="https://www.linkedin.com/in/mariana-okubaro-finamori-280893160/"target="_blank">LINKEDIN</a></div>
                     <div class="githubinfo"><a class="nav-link" href="https://github.com/marianafinamori"target="_blank"><img class="githubmain" src="images/githublogo.png"></a></div>
                 </div>
             </div>
