--- a/about.html
+++ b/about.html
@@ -7,6 +7,7 @@
     <title>Portfolio Assignment</title>
     <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/meyer-reset/2.0/reset.css">
     <link rel="stylesheet" href="https://stackpath.bootstrapcdn.com/bootstrap/4.3.1/css/bootstrap.min.css" integrity="sha384-ggOyR0iXCbMQv3Xipma34MD+dH/1fQ784/j6cY/iJTQUOhcWr7x9JvoRxT2MZw1T" crossorigin="anonymous">
+    <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.0.0-beta2/dist/css/bootstrap.min.css" rel="stylesheet" integrity="sha384-BmbxuPwQa2lc/FVzBcNJ7UAyJxM6wuqIj61tLrc4wSX0szH/Ev+nYRRuWlolflfl" crossorigin="anonymous">
     <link href="https://fonts.googleapis.com/css?family=Lato|Montserrat|Playfair+Display|Raleway" rel="stylesheet">
     <link rel="stylesheet" href="style.css">
 </head>
@@ -17,8 +18,8 @@
                         <h1>Mariana Finamori</h1>
            
                             <ul class="nav justify-content-end">
-                                <li class="nav-item"><a class="nav-link" href="index.html">MAIN</a></li>
-                                <li class="nav-item"><a class="nav-link" href="portfolio.html">PORTFOLIO</a></li>
+                                <li class="nav-item"><a class="nav-link link" href="index.html">MAIN</a></li>
+                                <li class="nav-item"><a class="nav-link link" href="portfolio.html">PORTFOLIO</a></li>
                             </ul>
                     </header>
                 </section>
@@ -27,11 +28,11 @@
                 <div id="about-background">ABOUT</div>
                 <div class="container" id="bio">
                 <p id="bio1">I am a full-stack software engineer graduated from Columbia University coding bootcamp. 
-                    I want to turn complex problems into simple and relevant applications.
+                    I am interested in turning complex problems into simple and relevant applications by bringing 
+                    my previous experiences to web development.
                 </p>
-                <p id="bio2">I have experience in advertising working with consumers motivations, insights, behavior 
-                    trends and brand positioning for several clients like Nestlé, Diageo, Pfizer and Cadbury Adams.
-                </p>
+                <p id="bio2">I have a solid experience in advertising working with consumers motivations, insights, 
+                    behavior trends and brand positioning for several clients like Nestlé, Diageo, Pfizer and Cadbury Adams. 
                 </p>
                 <p id="bio4">I am passionate about education, design and fashion.</p>
                 </div>
@@ -41,8 +42,13 @@
                     <div id="email">
                         Email: mariana.finamori@gmail.com
                     </div>
-                    <div id="linkedin"><a href="https://www.linkedin.com/in/mariana-okubaro-finamori-280893160/"target="_blank">LINKEDIN</a></div>
-                    <div class="githubinfo"><a class="nav-link" href="https://github.com/marianafinamori"target="_blank"><img class="githubmain" src="images/githublogo.png"></a></div>
+                    <div class="container">
+                    <div class="row containerlogos">
+                        <div class="col-sm-4" id="linkedin"><a href="https://www.linkedin.com/in/mariana-okubaro-finamori-280893160/"target="_blank">LINKEDIN</a></div>
+                    <div class="col-sm-4 githubinfo"><a class="github" href="https://github.com/marianafinamori"target="_blank"><img class="githubmain" src="images/githublogo.png"></a></div>
+                    </div>
+                    </div>
+                    
                 </div>
             </div>
         </div>
