--- a/index.html
+++ b/index.html
@@ -16,8 +16,8 @@
                     <header>
                             <h1 id="nameh1">Mariana Finamori</h1>
                             <ul class="nav justify-content-end">
-                                <li class="nav-item"><a class="nav-link" href="portfolio.html">PORTFOLIO</a></li>
-                                <li class="nav-item"><a class="nav-link" href="about.html">INFO</a></li>
+                                <li class="nav-item"><a class="nav-link link" href="portfolio.html">PORTFOLIO</a></li>
+                                <li class="nav-item"><a class="nav-link link" href="about.html">ABOUT</a></li>
                             </ul>
                     </header>
                 </section>
