--- a/portfolio.html
+++ b/portfolio.html
@@ -18,8 +18,8 @@
                 
                            
                             <ul class="nav justify-content-end">
-                                <li class="nav-item"><a class="nav-link" href="index.html">MAIN</a></li>
-                                <li class="nav-item"><a class="nav-link" href="about.html">INFO</a></li>
+                                <li class="nav-item"><a class="nav-link link" href="index.html">MAIN</a></li>
+                                <li class="nav-item"><a class="nav-link link" href="about.html">ABOUT</a></li>
                             </ul>
                             <h3>PORTFOLIO</h3>
                     </header>
@@ -28,7 +28,7 @@
             <div class="row">
                     <!-- FashionGIF -->
                     <div class="col-lg-5 m-2">
-                        <a href="https://marianafinamori.github.io/FashionGIF/"target="_blank"><img src="images/fashionGIF2.png">
+                        <a href="https://marianafinamori.github.io/FashionGIF/"target="_blank"><img class="work" src="images/fashionGIF2.png">
                         <div class="container title">G<span>IPHY</span> API</div>
                     </a>
                     <div class="github">
@@ -39,7 +39,7 @@
                     </div>
                      <!-- Hangman -->
                      <div class="col-lg-5 m-2">
-                        <a href="https://marianafinamori.github.io/Word-Guess-Game/"target="_blank"><img src="images/hangman.png">
+                        <a href="https://marianafinamori.github.io/Word-Guess-Game/"target="_blank"><img class="work" src="images/hangman.png">
                         <div class="container test">
                             <div class="title line1">HANGMAN</div>
                             <div class="title line2">JAVASCRIPT</div>
@@ -56,7 +56,7 @@
             <div class="row">
                    <!-- Psychic Game -->
                    <div class="col-lg-5 m-2">
-                    <a href="https://marianafinamori.github.io/Psychic-Game/"target="_blank"><img src="images/psychic.png">
+                    <a href="https://marianafinamori.github.io/Psychic-Game/"target="_blank"><img class="work" src="images/psychic.png">
                     <div class="container pack">
                         <div class="title line1 psy1">PSY<span>CHIC G</span><span id="nodeex">AME</span></div>
                         <div class="title line2 psy2" >JA<span id="scri2">VASCRI</span>PT</div>
@@ -70,7 +70,7 @@
                 </div>
                     <!-- Project One -->
                     <div class="col-lg-5 m-2">
-                            <a href="https://natalytak.github.io/ProjectOne/"target="_blank"><img src="images/projectone.png">
+                            <a href="https://natalytak.github.io/ProjectOne/"target="_blank"><img class="work" src="images/projectone.png">
                             <div class="container pack" id="cityseer">
                                 <div class="title line1">CITY SEER</div>
                                 <div class="title line2">PROJECT</div>
@@ -99,7 +99,7 @@
                         </div>
                         <!-- Constructor Node-->
                         <div class="col-lg-5 m-2">
-                            <a href="https://github.com/marianafinamori/constructor-node"target="_blank"><img src="images/constructor.jpg">
+                            <a href="https://github.com/marianafinamori/constructor-node"target="_blank"><img class="work" src="images/constructor.jpg">
                             <div class="title line1" id="constructor">CO<span>NSTRUC</span>TOR</div>
                             <div class="title line2">A<span>ND NO</span>DE</div>
                         </a>
@@ -114,7 +114,7 @@
                 <div class="row">
                     <!-- SQL Node Bamazon -->
                     <div class="col-lg-5 m-2">
-                            <a href="https://github.com/marianafinamori/mysql-node-bamazon"target="_blank"><img src="images/mysqlimg.jpg">
+                            <a href="https://github.com/marianafinamori/mysql-node-bamazon"target="_blank"><img class="work" src="images/mysqlimg.jpg">
                             <div class="container title line1" id="bamazon1">MY SQL NODE</div>
                             <div class="container title line2" id="bamazon2">BAMAZON</div>
                         </a>
@@ -126,7 +126,7 @@
                         </div>
                         <!-- Friend Finder -->
                         <div class="col-lg-5 m-2">
-                            <a class="piece" href="https://rocky-woodland-69315.herokuapp.com/"target="_blank"><img src="images/friendfinderimg.png">
+                            <a class="piece" href="https://rocky-woodland-69315.herokuapp.com/"target="_blank"><img class="work" src="images/friendfinderimg.png">
                             <div class="container title line1" id="node-word">NODE</div>
                             <div class="container title line2" id="express-word">EXPRESS</div>
                         </a>
@@ -142,7 +142,7 @@
                 <!-- Burger      -->
                 <div class="row">
                     <div class="col-lg-5 m-2">
-                            <a href="https://burger-burger2.herokuapp.com/"target="_blank"><img src="images/monkeyburger.png">
+                            <a href="https://burger-burger2.herokuapp.com/"target="_blank"><img class="work" src="images/monkeyburger.png">
                                 <div class="container pack">
                             <div class="container title line1 case1">NO<span id="nodeex-span">DE EXP</span>RESS</div>
                             <div class="container title line2 case2">HAN<span id="handlebars-span">DLEB</span>ARS</div>
@@ -157,7 +157,7 @@
 
                     <!-- Project2     -->
                     <div class="col-lg-5 m-2">
-                        <a href="https://powerful-shelf-31543.herokuapp.com/"target="_blank"><img src="images/scholar1.png">
+                        <a href="https://powerful-shelf-31543.herokuapp.com/"target="_blank"><img class="work" src="images/scholar1.png">
                         <div class="container title line1" id="scholar">SCHOLAR</div>
                         <div class="container title line2" id="scholar-project">PROJ<span id="ec">EC</span>T</div>
                     </a>
@@ -173,7 +173,7 @@
                 <div class="row">
                     <!-- Memory Game -->
                     <div class="col-lg-5 m-2">
-                        <a href="https://marianafinamori.github.io/memory-game/"target="_blank"><img src="images/memorygame.png">
+                        <a href="https://marianafinamori.github.io/memory-game/"target="_blank"><img class="work" src="images/memorygame.png">
                             <div class="container pack">
                         <div class="title memorygametitle line1">MEMORY GAME</div>
                         <div class="title memorygametitle line2 react">REACT</div>
@@ -187,7 +187,7 @@
                     </div>
                     <!-- Google Books -->
                     <div class="col-lg-5 m-2">
-                            <a href="https://google-books-finder.herokuapp.com/"target="_blank"><img src="images/responsiveportfolio.png">
+                            <a href="https://google-books-finder.herokuapp.com/"target="_blank"><img class="work" src="images/responsiveportfolio.png">
                                 <div class="container pack">
                                 <div class="title googlebooks line1">GOOGLE BOOKS</div>
                             <div class="title mern line2">MERN</div>
@@ -204,7 +204,7 @@
                 <div class="row">
                     <!-- Economist Scraper -->
                     <div class="col-lg-5 m-2">
-                        <a href="https://the-economist-scraper.herokuapp.com/"target="_blank"><img src="images/economist.png">
+                        <a href="https://the-economist-scraper.herokuapp.com/"target="_blank"><img class="work" src="images/economist.png">
                         <span class="container title economist line1" id="nodeex">SCRAPER</span>
                         <div class="container title economist line2">MONGO DB</div>
                     </a>
@@ -216,8 +216,8 @@
                     </div>
                     <!-- Triangulate -->
                     <div class="col-lg-5 m-2">
-                            <a href="https://triangulate-now.herokuapp.com/"target="_blank"><img src="images/triangulate.png">
-                            <div class="container title triangulate line1">PROJECT 3</div>
+                            <a href="https://triangulate-now.herokuapp.com/"target="_blank"><img class="work" src="images/triangulate.png">
+                            <div class="container title triangulate line1">PROJECT <span class="class3">3</span></div>
                             <div class="container title triangulate mern line2">MERN</div>
                         </a>
                         <div class="github">
@@ -231,7 +231,7 @@
             <div class="row">
                 <!-- TriviaGame -->
                 <div class="col-lg-5 m-2">
-                    <a href="https://marianafinamori.github.io/TriviaGame/"target="_blank"><img src="images/triviagame.png">
+                    <a href="https://marianafinamori.github.io/TriviaGame/"target="_blank"><img class="work" src="images/triviagame.png">
                     <div class="container title" id="trivia">T<span>RI</span>VIA G<span>A</span>ME</div>
                 </a>
                 <div class="github">
@@ -242,7 +242,7 @@
                 </div>
                  <!-- Bootstrap Portfolio -->
             <div class="col-lg-5 m-2">
-                <a href="https://marianafinamori.github.io/Bootstrap-Portfolio/"target="_blank"><img src="images/responsiveportfolio.png">
+                <a href="https://marianafinamori.github.io/Bootstrap-Portfolio/"target="_blank"><img class="work" src="images/responsiveportfolio.png">
                 <div class="container title" id="bootstrap">BOOTSTRAP PORTFOLIO</div>
             </a>
             <div class="github">
